Fix centering issues on mobile

--- a/src/ExperienceItem.css
+++ b/src/ExperienceItem.css
@@ -28,6 +28,7 @@
 	font-family: monospace;
 	font-size: 1.2em;
 	margin: 0px;
+	text-align: center;
 }
 
 .experience-name-and-dates {
